--- a/MakefileInc.mk.example
+++ b/MakefileInc.mk.example
@@ -5,25 +5,15 @@ CXX= mpicxx
 LINK= $(CXX)
 
 # optimized. C++14 required by sctl
-CXXFLAGS = -std=c++14 -qopenmp
+CXXFLAGS = -std=c++14 -fopenmp
 LINKFLAGS= $(CXXFLAGS) 
 
-RELEASE_OPT = -xcore-avx2 -axcore-avx512 -O3 -DNDEBUG
+RELEASE_OPT = -O3 -DNDEBUG
 DEBUG_OPT = -O0 -g -DDEBUG
 
-# EXTERNAL LIBRARIES one by one
-# ALL STATIC LINK except mkl, openmp, and system runtime dynamic libs
-# this can be different for each library
-TRILINOSBASE = /mnt/home/wyan/local
-SFTPATH = /mnt/home/wyan/local
-# TRNG
-USERINCLUDE += -I$(SFTPATH)/include/trng
-USERLINK += $(SFTPATH)/lib/libtrng4.a
-# EIGEN, header only
-USERINCLUDE += -I$(SFTPATH)/include/eigen3
+SFTPATH = /usr/local
 # Boost, header only
-USERINCLUDE += -I/cm/shared/sw/pkg/devel/boost/1.68-gcc7/include/
+USERINCLUDE += -I/usr/local/Cellar/boost/1.69.0/include
 # YAML
-USERINCLUDE += -I$(SFTPATH)/include/
-USERLINK += $(SFTPATH)/lib/libyaml-cpp.a
-
+# USERINCLUDE += -I$(SFTPATH)/include/
+# USERLINK += $(SFTPATH)/lib/libyaml-cpp.a
